--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,10 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
+        "php": "^8.1|^8.2|^8.3",
         "intervention/image": "^3.11",
-        "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1",
+        "laravel/framework": "^11.0|^12.0",
+        "laravel/tinker": "^2.9",
         "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
@@ -71,6 +71,6 @@
             "php-http/discovery": true
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
