--- a/composer.json
+++ b/composer.json
@@ -69,7 +69,11 @@
         "allow-plugins": {
             "pestphp/pest-plugin": true,
             "php-http/discovery": true
-        }
+        },
+        "platform": {
+            "php": "8.1.0"
+        },
+        "platform-check": false
     },
     "minimum-stability": "stable",
     "prefer-stable": true
