--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.1|^8.2|^8.3",
+        "php": "^8.1|^8.2|^8.3|^8.4",
         "intervention/image": "^3.11",
         "laravel/framework": "^11.0|^12.0",
         "laravel/tinker": "^2.9",
@@ -71,7 +71,7 @@
             "php-http/discovery": true
         },
         "platform": {
-            "php": "8.1.0"
+            "php": "8.4.0"
         },
         "platform-check": false
     },
